AWS Pipeline Project/ceg3120-essentials-Seth-Lyall/Project2/lyall-cf.yml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  This is a cloud formation template that creates a VPC with a public subnet and an EC2 instance running Ubuntu. The instance can be ssh'd to from some allowed IPs
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: "AWS::EC2::KeyPair::KeyName"
    ConstraintDescription: must be the name of an existing EC2 KeyPair
Mappings:
  AWSRegionAMI: # AMI for Ubuntu server in each supported region
    us-east-1: # N. Virginia
      # AMI ID for Ubuntu 24.04 LTS (HVM), SSD Volume Type
      HVM64: ami-0b6c6ebed2801a5cb
Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: 192.168.0.0/23
      Tags:
        - Key: Application
          Value: !Ref "AWS::StackId"
        - Key: Name
          Value: lyall-cf-vpc
  Subnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 192.168.0.0/24
      Tags:
        - Key: Name
          Value: lyall-cf-subnet
        - Key: Application
          Value: !Ref "AWS::StackId"
  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: Name
          Value: lyall-cf-igw
        - Key: Application
          Value: !Ref "AWS::StackId"
  AttachGateway:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  RouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: lyall-cf-rt
        - Key: Application
          Value: !Ref "AWS::StackId"
  Route:
    Type: "AWS::EC2::Route"
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  SubnetRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable
  UbuntuIPAddress:
    Type: "AWS::EC2::EIP"
    DependsOn: AttachGateway
    Properties:
      Domain: vpc
      InstanceId: !Ref PublicUbuntuInstance
      Tags:
        - Key: Name
          Value: lyall-cf-eip
  SecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Enable SSH access via port 22 from home, wright state, all internal ports, port 80 from anywhere, and port 8080 from anywhere
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: 127.0.0.1/32 # Allow SSH from anywhere locally
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: 130.108.0.0/16 # Allow SSH from wright state
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: Censored # Allow SSH from home
        - IpProtocol: icmp
          FromPort: "1"
          ToPort: "65535"
          CidrIp: 127.0.0.1/32 # Allow ICMP from anywhere locally
        - IpProtocol: icmp
          FromPort: "1"
          ToPort: "65535"
          CidrIp: 130.108.0.0/16 # Allow ICMP from wright state
        - IpProtocol: icmp
          FromPort: "1"
          ToPort: "65535"
          CidrIp: Censored # Allow ICMP from home
        - IpProtocol: tcp
          FromPort: "80"
          ToPort: "80"
          CidrIp: 0.0.0.0/0 # Allow HTTP from anywhere
        - IpProtocol: tcp
          FromPort: "8080"
          ToPort: "8080"
          CidrIp: 0.0.0.0/0 # Allow Apache from anywhere
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: "1"
          ToPort: "65535"
          CidrIp: 0.0.0.0/0 # Allow all outbound traffic
      Tags:
        - Key: Name
          Value: lyall-cf-sg
  NetworkACL:
    Type: "AWS::EC2::NetworkAcl"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: lyall-cf-nacl
        - Key: Application
          Value: !Ref "AWS::StackId"
  InboundDenyRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref NetworkACL
      RuleNumber: 90
      Protocol: -1
      Egress: false
      RuleAction: deny
      CidrBlock: 107.23.4.178/32
      PortRange:
        From: 22
        To: 22
  InboundAllowAllRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref NetworkACL
      RuleNumber: 100
      Protocol: -1
      Egress: false
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 1
        To: 65535
  OutboundDenyWttrRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref NetworkACL
      RuleNumber: 90
      Protocol: -1
      Egress: true
      RuleAction: deny
      CidrBlock: 107.23.4.178/32 # Deny outbound traffic to wttr.in
      PortRange:
        From: 1
        To: 65535
  OutboundAllowAllRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref NetworkACL
      RuleNumber: 100
      Protocol: -1
      Egress: true
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 1
        To: 65535
  SubnetNetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: Subnet
      NetworkAclId:
        Ref: NetworkACL
  PublicUbuntuInstance:
    Type: "AWS::EC2::Instance"
    DependsOn: AttachGateway
    Properties:
      ImageId: !FindInMap [AWSRegionAMI, !Ref "AWS::Region", HVM64]
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      Tags:
        - Key: Application
          Value: !Ref "AWS::StackId"
        - Key: Name
          Value: lyall-cf-ubuntu
      NetworkInterfaces:
        - GroupSet:
            - !Ref SecurityGroup
          AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          DeleteOnTermination: "true"
          SubnetId: !Ref Subnet
          PrivateIpAddress: 192.168.0.10
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
            apt-get update && \
            apt-get upgrade -y && \
          # Change the hostname to lyall-ubuntu
            hostnamectl set-hostname lyall-ubuntu && \
          # Install curl, git, python3, pip3, apache2, and wamerican
            apt-get install -y \
            curl \
            git \
            python3 \
            python3-pip \
            apache2 \
            wamerican && \
          # Install Docker
            curl -fsSL https://get.docker.com -o get-docker.sh && \
            sh ./get-docker.sh && \
          # Write wordle.sh to the default user's home directory
            curl -L https://raw.githubusercontent.com/pattonsgirl/CEG3120/refs/heads/main/Projects/Project2/wordle.sh -o /home/ubuntu/wordle.sh && \
          # Write index.html to the default apache2 web content directory
            curl -L https://raw.githubusercontent.com/pattonsgirl/CEG3120/refs/heads/main/Projects/Project2/index.html -o /var/www/html/index.html && \
          # Run the wsukduncan/cheatsheet docker container from dockerhub in detatched mode bound to port 8080 to restart automatically when the instance is loaded
            docker pull wsukduncan/cheatsheet && \
            docker run -d -p 8080:80 --restart unless-stopped wsukduncan/cheatsheet && \
          # Reboot the instance
            reboot
